linuxmuster-linbo7 (4.2.10-0) lmn72; urgency=low

  * make nomodeset kernel parameter default (7a80e76).
  * clean up remnants of 32bit linbo (#106).
  * remove deprecated kernel signing stuff (1835659, a453cb0).
  * change kernel and linbofs compression to xz (#109).
  * change filename of linbofs64.lz to linbofs64 (9e42a3d, f8fffbb).
  * fix network device order (b717732).
  * fix linbo_gui on iso boot (4692beb).
  * update stable kernel to 6.6.2 (a5e6449).
  * update longterm kernel to 6.1.63 (82d0259).
  * update legacy kernel to 5.15.139 (a431b2f).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Fri, 24 Nov 2023 07:30:21 +0000

linuxmuster-linbo7 (4.2.9-0) lmn72; urgency=low

  * fix localmode (ff6d102).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Thu, 16 Nov 2023 17:01:31 +0000

linuxmuster-linbo7 (4.2.8-1) lmn72; urgency=low

  * update-linbofs fix (3e191d0).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 15 Nov 2023 21:26:43 +0000

linuxmuster-linbo7 (4.2.8-0) lmn72; urgency=low

  * add lenovo hid drivers to default kernel (dad2efa).
  * fix handling of unregistered and unpartitioned clients (3f61f9c).
  * pack modules in xz archives to decrease package size ().

 -- Thomas Schmitt <thomas@linuxmuster.net>  Wed, 15 Nov 2023 20:31:53 +0000

linuxmuster-linbo7 (4.2.7-0) lmn72; urgency=low

  * use jobs to compile external modules (b0d6a7d).
  * optimize kernel wifi configuration (7c28fc3, f6b80ae).
  * fix linbo kernel provision on kernel change (0b542da).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Tue, 14 Nov 2023 21:39:28 +0000

linuxmuster-linbo7 (4.2.6-0) lmn72; urgency=low

  * add ability to use lts kernel 6.1.62 alternatively (#107, 6989d30).
  * Fix typo in update-linbofs (872dc1f).
  * use jobs to compile kernels (2fd53f3).

 -- Thomas Schmitt <thomas@linuxmuster.net>  Mon, 13 Nov 2023 08:22:20 +0000

linuxmuster-linbo7 (4.2.5-0) lmn72; urgency=low

  * add ability to use Linbo's legacy kernel 5.15.138 alternatively (#107, 503b181, b6f0242).
