@@ -1,3 +1,9 @@
+linuxmuster-linbo7 (4.2.11-0) lmn72; urgency=low
+
+  * log current linbo version of client ().
+
+ -- Thomas Schmitt <thomas@linuxmuster.net>  Sat, 25 Nov 2023 11:55:58 +0000
+
 linuxmuster-linbo7 (4.2.10-0) lmn72; urgency=low
 
   * make nomodeset kernel parameter default (7a80e76).
